--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,109 +1,98 @@
-body{
-    background:  #FEFFE4;
-}
-.container {
-   display: flex;
-   margin: auto;
-   flex-direction: column;
-   align-items: center;
-   font-family: Arial;
-   
-   width: 420px;
-   height: 439px;
-   padding:20px;
-   border-radius: 12px;
-   background: #FFF;
-   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+:root {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 16pt;
+    --background-color: #FEFFE4;
 }
 
-.child{
-    color: #9A9A9A;
-font-family: Ubuntu;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-}
-
-.input{
-    width: 304px;
-    height: 34px;
-    border-radius: 4px;
-    border: 1px solid #BFBFBF;
-    background: #F6F6F6;
-}
-
-a {
-    border-color: #0d21da;
-    border-radius: 20px;
-    box-shadow: 10px 10px 8px #1f21b37c;
-    background-color: #3140c981;
-    padding: 10px 15px;
-    
-    text-decoration: none;
-    color: black;
-    
-    
-}
-
-h1 {
-    border-color: #608ab1;
-    border-radius: 20px;
-    box-shadow: 10px 10px 8px #32338a7c;
-    background-color: #3140c981;
-    padding: 10px 15px;
-    margin: 15px
-}
-
-ul {
+body {
     display: flex;
-    justify-content: space-around;
-    list-style: none;
-    border-radius: 12px;
-    border-spacing: 0;
-    border-collapse: collapse;
-    box-shadow: 10px 10px 8px #1f21b37c;
-    background: #eeebebf5;
-    border-bottom: 3px solid #608ab1;
-  
-}
-li {
-    padding: 15px 20px;
-    
-    text-transform: uppercase;
-    font-size: 10pt;
-    font-family: Arial;
-    
-   
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--background-color);
 }
 
-.bt{
-    width: 167px;
-    height: 46px;
-    display: flex;
-    border: none;
-    border-radius: 4px;
-    background: #007BED;
+.titulo-pagina {
+    margin: 2.8rem auto;
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+/* FORMULÁRIO */
+
+.formulario {
+    background-color: #fff;
+    padding: 1.4rem 3.7rem;
+    border-radius: 0.75rem;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    
+    margin: 0 auto 3rem;
+}
 
+.formulario-update input[type="text"] {
+    border-radius: 0.25rem;
+    border: 1px solid #000;
+    background-color: var(--background-color);
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
+    width: 19rem;
+    height: 2.1rem;
+    padding: 0 .5rem;
+    font-size: 1rem;
+    font-family: 'Ubuntu', sans-serif;
+    line-height: 1;
+}
+
+.formulario-update input[type="text"]::placeholder {
+    font-style: italic;
+    font-size: 1rem;
+    color: #9A9A9A;
+}
+
+.titulo-formulario {
+    font-size: 1.5rem;
+    margin-bottom: 1.8rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+.entrada-formulario {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0.9rem;
+}
+
+.formulario-update label {
+    font-size: 1rem;
+    padding-left: .5rem;
+    margin-bottom: .25rem;
+}
+
+.botoes-formulario {
+    margin: 3.7rem auto 1.9rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bt-confirmar {
+    width: 10.4rem;
+    height: 2.9rem;
+    border-radius: 0.25rem;
+    background: #48A4FA;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #FFF;
     text-align: center;
-    font-family: Ubuntu;
-    font-size: 24px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    border: none;
 }
 
-.bt:active{
+.bt-confirmar:disabled {
+    background: #CAE6FF;
+}
+
+.bt-confirmar:enabled:hover,
+.bt-confirmar:enabled:active {
     background: #007BED;
-    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
-    
-}
-
-ul li {}
-
-.delete-button {
-    color: red;
 }
