--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,98 +1,25 @@
-:root {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 16pt;
-    --background-color: #FEFFE4;
-}
-
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--background-color);
+    width: 1440px;
+    height: 1024px;
+    background: #FEFFE4;
 }
 
-.titulo-pagina {
-    margin: 2.8rem auto;
-    font-size: 2rem;
-    font-weight: 400;
-}
-
-/* FORMULÁRIO */
-
-.formulario {
-    background-color: #fff;
-    padding: 1.4rem 3.7rem;
-    border-radius: 0.75rem;
+.formulario{
+    width: 420px;
+    height: 439px;
+    flex-shrink: 0;
+    border-radius: 12px;
+    background: #FFF;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    margin: 0 auto 3rem;
 }
 
-.formulario-update input[type="text"] {
-    border-radius: 0.25rem;
+.entrada-formulario{
+    width: 304px;
+    height: 34px;
+    flex-shrink: 0;
+    border-radius: 4px;
     border: 1px solid #000;
-    background-color: var(--background-color);
+    background: #FEFFE4;
     box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
-    width: 19rem;
-    height: 2.1rem;
-    padding: 0 .5rem;
-    font-size: 1rem;
-    font-family: 'Ubuntu', sans-serif;
-    line-height: 1;
-}
-
-.formulario-update input[type="text"]::placeholder {
-    font-style: italic;
-    font-size: 1rem;
-    color: #9A9A9A;
-}
-
-.titulo-formulario {
-    font-size: 1.5rem;
-    margin-bottom: 1.8rem;
-    font-weight: 400;
-    text-align: center;
-}
-
-.entrada-formulario {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 0.9rem;
-}
-
-.formulario-update label {
-    font-size: 1rem;
-    padding-left: .5rem;
-    margin-bottom: .25rem;
-}
-
-.botoes-formulario {
-    margin: 3.7rem auto 1.9rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.bt-confirmar {
-    width: 10.4rem;
-    height: 2.9rem;
-    border-radius: 0.25rem;
-    background: #48A4FA;
-    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    color: #FFF;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    border: none;
-}
-
-.bt-confirmar:disabled {
-    background: #CAE6FF;
-}
-
-.bt-confirmar:enabled:hover,
-.bt-confirmar:enabled:active {
-    background: #007BED;
+    
 }
